--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>{{ _('home_header') }}</title>
+    <meta charset="UTF-8">
+    <title>{{ _('home_title') }}</title>
 </head>
 
 <body>
-    <h1>{{ _('home_title') }}</h1>
+    <h1>{{ _('home_header') }}</h1>
 </body>
 
 </html>
